First unclean working version of the performance improvements

--- a/jquery-linedtextarea.css
+++ b/jquery-linedtextarea.css
@@ -33,7 +33,7 @@
 .linedtextarea textarea, .linedwrap .codelines .lineno {
 	font-size: 10pt;
 	font-family: monospace;
-	line-height: normal !important;
+	line-height: 15px !important;
 }
 
 .linedtextarea textarea {
